--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/provider": "^2.0.0",
     "@google/genai": "^1.30.0",
     "@supabase/supabase-js": "^2.55.0",
     "@vitejs/plugin-react": "^4.6.0",
