--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/provider": "^2.0.0",
     "@google/genai": "^1.30.0",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@supabase/supabase-js": "^2.55.0",
     "@vitejs/plugin-react": "^4.6.0",
     "firebase": "^11.10.0",
@@ -22,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "stripe": "^20.0.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
