--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "resend": "^6.6.0",
     "stripe": "^20.0.0",
     "swiper": "^11.2.10"
   },
