--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/sitemap.xml", "destination": "/sitemap.xml" },
+    { "source": "/robots.txt", "destination": "/robots.txt" },
+    { "source": "/((?!api|.*\\..*).*)", "destination": "/index.html" }
   ],
   "functions": {
     "api/webhook.js": {
