Add headers for sitemap.xml in vercel.json
Added custom headers for sitemap.xml to control caching and content type.

--- a/vercel.json
+++ b/vercel.json
@@ -11,4 +11,19 @@
       "maxDuration": 10
     }
   }
+  "headers": [
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store"
+        },
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        }
+      ]
+    }
+  ]
 }
